--- a/safenode/Cargo.toml
+++ b/safenode/Cargo.toml
@@ -45,6 +45,7 @@ itertools = "~0.10.1"
 lazy_static = "~1.4.0"
 libp2p = { version="0.51", features = ["tokio", "dns", "kad", "macros", "request-response", "identify"] }
 libp2p-quic = { version = "0.7.0-alpha.3", features = ["tokio"] }
+lru_time_cache = "0.11.11"
 opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
 opentelemetry-otlp = { version = "0.10", optional = true }
 opentelemetry-semantic-conventions = { version = "0.9.0", optional = true }
