--- a/sn_build_info/Cargo.toml
+++ b/sn_build_info/Cargo.toml
@@ -9,3 +9,6 @@ name = "sn_build_info"
 readme = "README.md"
 repository = "https://github.com/maidsafe/safe_network"
 version = "0.1.1"
+
+[build-dependencies]
+vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
