--- a/sn_transfers/Cargo.toml
+++ b/sn_transfers/Cargo.toml
@@ -15,6 +15,7 @@ async-trait = "0.1"
 bincode = "1.3.1"
 bls = { package = "blsttc", version = "8.0.1" }
 dirs-next = "~2.0.0"
+custom_debug = "~0.5.0"
 hex = "~0.4.3"
 lazy_static = "~1.4.0"
 merkletree = "~0.23.0"
