ci: ensure we use rust-cache v2 everywhere

--- a/.github/workflows/generate-benchmark-charts.yml
+++ b/.github/workflows/generate-benchmark-charts.yml
@@ -41,9 +41,8 @@ jobs:
           override: true
           components: rustfmt, clippy
 
-      - uses: Swatinem/rust-cache@v1
-        with:
-          cache-on-failure: true
+      - uses: Swatinem/rust-cache@v2
+        continue-on-error: true
 
       - run: cargo install cargo-criterion
 
